--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "css": "node-sass --watch assets/css/main.scss : assets/css/main.css"
+    "css": "node-sass --watch assets/css/main.scss assets/css/main.css"
   },
   "keywords": [],
   "author": "",
